feat: SetUp mediator and validation

--- a/Api/Api.csproj
+++ b/Api/Api.csproj
@@ -29,4 +29,11 @@
       <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Controllers\" />
+      <Folder Include="Dtos\" />
+      <Folder Include="Modules\Errors\" />
+      <Folder Include="Modules\Validators\" />
+    </ItemGroup>
+
 </Project>
