--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -13,4 +13,8 @@
       <PackageReference Include="Optional" Version="4.0.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Common\Interfaces\" />
+    </ItemGroup>
+
 </Project>
