--- a/Api/Api.csproj
+++ b/Api/Api.csproj
@@ -30,4 +30,8 @@
       <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Modules\ChatHub\" />
+    </ItemGroup>
+
 </Project>
