--- a/Api/appsettings.Development.json
+++ b/Api/appsettings.Development.json
@@ -6,6 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "Default": "Server=localhost;Port=5432;Database=postgres;User Id=postgres;Password=postgres;"
+    "Default": "Server=localhost;Port=5432;Database=postgres;User Id=postgres;Password=postgres;",
+    "Redis": "localhost:6379"
   }
 }
