--- a/Api/appsettings.Development.json
+++ b/Api/appsettings.Development.json
@@ -7,5 +7,8 @@
   },
   "ConnectionStrings": {
     "Default": "Server=localhost;Port=5432;Database=postgres;User Id=postgres;Password=postgres;"
+  },
+  "Redis": {
+    "ConnectionString": "localhost:6379"
   }
 }
