--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -12,6 +12,7 @@
       <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="6.0.0-preview.4.21253.5" />
       <PackageReference Include="Microsoft.AspNetCore.SignalR.Common" Version="8.0.0" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.0" />
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
       <PackageReference Include="Optional" Version="4.0.0" />
     </ItemGroup>
 
